# ginger

./: .expr  .gitignore  .pas  CMakeLists.txt  CMakePresets.json
include/: arena.h  ast.h  core.h  lexer.h  parser.h  tokens.h
src/: ast.c  ast.cc  ast.h  core.h  lexer.c  lexer.cc  lexer.h  main.c  main.cc  parser.c  parser.cc  parser.h  tokens.c  tokens.cc  tokens.h
